Read and save last transaction number processed to db; set last transaction number in new evn var, scrap old time based solution; fix API call paging

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
   "env": {
     "STEEM_USER": "",
     "POSTING_KEY_PRV": "",
-    "START_TIME_AS_EPOCH": "0",
+    "START_FROM_TRX_NUM": "0",
     "VOTING_ACTIVE": "true",
     "COMMENTING_ACTIVE": "true",
     "STEEM_POWER_OVERRIDE": "0"
