--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "wait.for": "0.6.6",
     "moment": "2.17.1",
     "moment-timezone": "0.5.11",
-    "mongodb": "2.0.43"
+    "mongodb": "2.0.43",
+    "sprintf-js": "1.1.1"
   }
 }
