--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "2.17.1",
     "moment-timezone": "0.5.11",
     "mongodb": "2.0.43",
-    "sprintf-js": "1.1.1"
+    "sprintf-js": "1.1.1",
+    "request": "^2.81.0"
   }
 }
